--- a/template_Grid/T83_spaceX.html
+++ b/template_Grid/T83_spaceX.html
@@ -11,7 +11,7 @@
             display: block;
             width: 960px;
             margin: 0 auto;
-            overflow: auto;
+            /* overflow: auto; */
 
         }
 
@@ -24,6 +24,14 @@
             text-transform: uppercase;
             font-size: 13px;
         }
+        #header nav{
+            display: grid;
+            
+        }
+        #services{
+            display: grid;
+        }
+
 
         nav {
             clear: both;
@@ -31,6 +39,8 @@
             background-color: #232323;
             padding: 10px;
             margin: 20px 0;
+            /* grid */
+            display: grid;
         }
         #footer {
             display: block;
@@ -39,7 +49,7 @@
         }
         
         .fl_right {
-                float: right;
+                /* float: right; */
             }
         @media only screen and (max-width:768px) {
             #header {
@@ -103,11 +113,11 @@
             }
 
             .fl_left {
-                float: left;
+                /* float: left; */
             }
 
             .fl_right {
-                float: right;
+                /* float: right; */
             }
 
 
