--- a/flex/column.html
+++ b/flex/column.html
@@ -22,6 +22,23 @@
             margin: 20px;
             left: 350px;
         }
+        nav{
+            background-color: aqua;
+            width: 200px;
+            margin-left: 10px ;
+            padding: 20px;
+
+            
+        }
+        nav ul {
+            display: flex;
+
+        }
+        li{
+            list-style: none;
+            text-transform: uppercase;
+            padding: 5px;
+        }
         
     </style>
 
