--- a/Nov6 2021(Grid Templates)/basic-83/index.html
+++ b/Nov6 2021(Grid Templates)/basic-83/index.html
@@ -3,23 +3,67 @@
 <head>
 <title>Basic 83</title>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="styles/layout.css" type="text/css">
 <!--[if lt IE 9]><script src="scripts/html5shiv.js"></script><![endif]-->
+<style>
+  @media only screen and (max-width: 1023px){
+    *{box-sizing: border-box;}
+    #header,#container,#footer{width:100%;}
+    #header{padding-top: 10px;}
+    #header #hgroup{text-align: center;}
+    #header form{grid-template-columns: auto auto;width: 100%;text-align: center;margin-top:10px;}
+    form fieldset{width: 100%;text-align: center;margin-bottom:10px;}
+    #header nav{padding: 10px 0;}
+    #header nav ul {display: grid;grid-gap:0px 0px; grid-template-rows: auto auto auto auto auto;text-align: center;}
+    #header nav li{ margin-right:0px; text-transform:uppercase;width:100%;border:1px solid pink;padding:5px}  
+    #header form #sf_submit{width:70px; font-size:12px; font-weight:bold; text-transform:uppercase; color:#FFFFFF; background-color:#FF9900; border:none; cursor:pointer;}        
+    #container #slider img{width:100%; height:280px;}
+    #container{padding:10px 0px;}
+    #container #slider{margin-bottom:20px;}
+    #container #homepage #services {display: grid;grid-template-rows: auto auto auto auto;text-align: center;}
+    .one_quarter, .two_quarter, .three_quarter, .four_quarter {margin:0 20px 0 0;}
+    .one_quarter{width: 100%;border:1px solid red;margin-bottom: 2px;padding: 5px;background-color:seashell}
+    #container #homepage #services p {text-align: center;}
+  }
+  @media only screen and (min-width: 1023px){
+    #header, #container, #footer{display:block; width:960px; margin:0 auto;}
+    #header #grid1{display: grid; grid-template-columns: auto auto;}
+    #header #hgroup{margin:0 0 20px 0;}
+    #header form{display:block; width:290px;margin:20px 0; padding:0;margin-left: 400px;}
+    #header nav ul {display: grid;grid-gap:0px 0px; grid-template-columns: auto auto auto auto auto;}
+    #header nav li{ margin-right:0px; text-transform:uppercase;width:80px;}
+    #header form{display: grid;grid-template-columns: auto auto;width: 300px;}
+    form fieldset{width: 300px;}
+    #header form input{width:200px; margin:0; padding:5px; color:#C0BAB6; background-color:#232323; border:1px solid #666666;}
+    #header form #sf_submit{width:70px; font-size:12px; font-weight:bold; text-transform:uppercase; color:#FFFFFF; background-color:#FF9900; border:none; cursor:pointer;}
+    #container #slider img{width:960px; height:280px;}
+    #container #slider{margin-bottom:50px;}
+    #container #homepage #services {display: grid;grid-template-columns: auto auto auto auto;}
+    .one_quarter{width:225px;}
+    .one_quarter, .two_quarter, .three_quarter, .four_quarter{display:block;  margin:0 15px 0 0;}
+
+
+  }
+
+</style>
 </head>
 <body>
 <div class="wrapper row1">
   <header id="header" class="clear">
-    <div id="hgroup">
-      <h1><a href="#">Basic 83</a></h1>
-      <h2>Free HTML5 Website Template</h2>
+    <div id="grid1">
+      <div id="hgroup">
+        <h1><a href="#">Basic 83</a></h1>
+        <h2>Free HTML5 Website Template</h2>
+      </div>
+      <form action="#" method="post">
+        <fieldset>
+          <legend>Search:</legend>
+          <input type="text" value="Search Our Website&hellip;" onFocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;">
+          <input type="submit" id="sf_submit" value="submit">
+        </fieldset>
+      </form>
     </div>
-    <form action="#" method="post">
-      <fieldset>
-        <legend>Search:</legend>
-        <input type="text" value="Search Our Website&hellip;" onFocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;">
-        <input type="submit" id="sf_submit" value="submit">
-      </fieldset>
-    </form>
     <nav>
       <ul>
         <li><a href="#">Text Link</a></li>
@@ -65,35 +109,21 @@
           <p class="more"><a href="#">Read More &raquo;</a></p>
         </article>
       </section>
-      <!-- / services area -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <section class="last clear">
-        <article class="three_quarter">
-          <h2>Lorum ipsum dolor</h2>
-          <p>This is a W3C compliant free website template from <a href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="https://www.os-templates.com/template-terms">website template licence</a>.</p>
-          <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit <a href="https://www.os-templates.com/">free website templates</a>.</p>
-          <footer class="more"><a href="#">Read More &raquo;</a></footer>
-        </article>
-        <article class="one_quarter lastbox">
-          <h2>Lorum ipsum dolor</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper pellentesque. Quisque non luctus sem.</p>
-          <footer class="more"><a href="#">Read More &raquo;</a></footer>
-        </article>
-      </section>
-      <!-- / Two Third -->
+         <!-- / Two Third -->
+      </div>
+      <!-- / content body -->
     </div>
-    <!-- / content body -->
   </div>
-</div>
-<!-- Footer -->
-<div class="wrapper row3">
-  <footer id="footer" class="clear">
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-  </footer>
-</div>
+  
+  <!-- Footer -->
+  <div class="wrapper row3">
+    <footer id="footer" class="clear">
+      <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
+      <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
+    </footer>
+  </div>
+  
+
+
 </body>
 </html>
