--- a/Nov6 2021(Grid Templates)/basic-84/index.html
+++ b/Nov6 2021(Grid Templates)/basic-84/index.html
@@ -3,17 +3,59 @@
 <head>
 <title>Basic 84</title>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="styles/layout.css" type="text/css">
 <!--[if lt IE 9]><script src="scripts/html5shiv.js"></script><![endif]-->
+<style>
+  @media only screen and (max-width: 1023px) {
+    *{box-sizing: border-box;}
+    #header{width:100%;padding: 10px 0px;;}
+    #header #hgroup{width: 100%;text-align: center;margin-bottom: 5px;}
+    #header form{width:100%;text-align: center;margin-bottom: 5px;}
+    #header nav{padding:5px 0px}
+    #header nav ul{display: grid;grid-template-rows: auto auto auto auto auto ;padding: 2px;}
+    #header nav li{border:1px solid grey;padding:2px;text-align: center;}
+    #header form #sf_submit{width:70px; font-size:12px; font-weight:bold; text-transform:uppercase; color:#FFFFFF; background-color:#FF9900; border:none; cursor:pointer;}
+    #container{width:100%;padding: 10px 0px;}
+    #container #slider{margin-bottom: 10px;}
+    #container #slider img{width:100%;}
+    #container #shout{width:100%;margin-bottom: 10px;}
+    #container #homepage h1{margin-bottom:10px; padding-bottom:5px; border-bottom:1px solid #D6D6D6;}
+    #container #homepage #services article{ padding: 5px; width: 100%; margin:0 30px 0 0;border: 1px solid pink;text-align: center;margin-bottom: 2px;}
+    #container .more{text-align:center;}
+    #container #homepage #latest {display: grid;grid-template-rows: auto auto auto auto;}
+    .one_quarter{width: 100%;}
+    .one_quarter img{width: 100%;}
+    #footer{width:100%}
+  }
+   @media only screen and (min-width: 1024px) {
+    #header{display: grid;grid-template-columns: auto auto;}
+    #header #hgroup{ margin:0 0 20px 0;}
+    #header form{display:block; width:290px;margin:20px 0; padding:0;margin-left:420px;}
+    nav{grid-column-start: 1;grid-column-end:3;}  
+    #header form{display: grid;grid-template-columns: auto auto;}
+    #header form input{width:200px; margin:0; padding:5px;margin-right: 0px; color:#C0BAB6; background-color:#232323; border:1px solid #666666;}
+    #header form #sf_submit{width:70px; font-size:12px; font-weight:bold; text-transform:uppercase; color:#FFFFFF; background-color:#FF9900; border:none; cursor:pointer;}
+    #header nav ul{display: grid;grid-template-columns:auto auto auto auto auto;}
+    #header nav li{margin-right:25px; text-transform:uppercase;}
+    #container #homepage #services {display: grid;grid-template-columns: auto auto auto;}
+    #container #homepage #services article{ width:300px; margin:0 30px 0 0; padding:0;border: 1px solid pink;}
+    #container #homepage h1{margin-bottom:25px; padding-bottom:10px; border-bottom:1px solid #D6D6D6;}
+    #container .more{text-align:right;}
+    #container #homepage #latest {display: grid;grid-template-columns: auto auto auto auto;}
+    .one_quarter, .two_quarter, .three_quarter, .four_quarter{margin:0 20px 0 0; text-align:justify;}
+
+   }
+</style>
 </head>
 <body>
 <div class="wrapper row1">
   <header id="header" class="clear">
-    <div id="hgroup">
+    <div id="hgroup" id="1">
       <h1><a href="#">Basic 84</a></h1>
       <h2>Free HTML5 Website Template</h2>
     </div>
-    <form action="#" method="post">
+    <form action="#" method="post" >
       <fieldset>
         <legend>Search:</legend>
         <input type="text" value="Search Our Website&hellip;" onFocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;">
@@ -39,64 +81,64 @@
     <section id="shout">
       <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt namjusto cras urna.</p>
     </section>
-    <!-- main content -->
-    <div id="homepage">
-      <!-- services area -->
-      <h1>Services We Offer</h1>
-      <section id="services" class="clear">
-        <article>
-          <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
-          <strong>Lorum ipsum dolor</strong>
-          <p>This is a W3C compliant free website template from <a href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="https://www.os-templates.com/template-terms">website template licence</a>.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <article>
-          <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
-          <strong>Lorum ipsum dolor</strong>
-          <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <article class="last">
-          <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
-          <strong>Lorum ipsum dolor</strong>
-          <p>For more HTML5 templates visit <a href="https://www.os-templates.com/">free website templates</a>. Orciinterdum condimenterdum nullamcorper elit nam curabitur laoreet met praesenean et iaculum.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-      </section>
-      <!-- / services area -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- One Quarter -->
-      <h1>Latest From The Gallery</h1>
-      <section id="latest" class="last clear">
-        <article class="one_quarter">
-          <figure><img src="images/demo/215x315.gif" width="215" height="315" alt="">
-            <figcaption>Image Caption Here</figcaption>
-          </figure>
-        </article>
-        <article class="one_quarter">
-          <figure><img src="images/demo/215x315.gif" width="215" height="315" alt="">
-            <figcaption>Image Caption Here</figcaption>
-          </figure>
-        </article>
-        <article class="one_quarter">
-          <figure><img src="images/demo/215x315.gif" width="215" height="315" alt="">
-            <figcaption>Image Caption Here</figcaption>
-          </figure>
-        </article>
-        <article class="one_quarter lastbox">
-          <figure><img src="images/demo/215x315.gif" width="215" height="315" alt="">
-            <figcaption>Image Caption Here</figcaption>
-          </figure>
-        </article>
-      </section>
-      <!-- / One Quarter -->
+       <!-- main content -->
+       <div id="homepage">
+        <!-- services area -->
+        <h1>Services We Offer</h1>
+        <section id="services" class="clear">
+          <article>
+            <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
+            <strong>Lorum ipsum dolor</strong>
+            <p>This is a W3C compliant free website template from <a href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="https://www.os-templates.com/template-terms">website template licence</a>.</p>
+            <p class="more"><a href="#">Read More &raquo;</a></p>
+          </article>
+          <article>
+            <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
+            <strong>Lorum ipsum dolor</strong>
+            <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files.</p>
+            <p class="more"><a href="#">Read More &raquo;</a></p>
+          </article>
+          <article class="last">
+            <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
+            <strong>Lorum ipsum dolor</strong>
+            <p>For more HTML5 templates visit <a href="https://www.os-templates.com/">free website templates</a>. Orciinterdum condimenterdum nullamcorper elit nam curabitur laoreet met praesenean et iaculum.</p>
+            <p class="more"><a href="#">Read More &raquo;</a></p>
+          </article>
+        </section>
+              <!-- / services area -->
+        <!-- ########################################################################################## -->
+        <!-- ########################################################################################## -->
+        <!-- ########################################################################################## -->
+        <!-- ########################################################################################## -->
+        <!-- One Quarter -->
+        <h1>Latest From The Gallery</h1>
+        <section id="latest" class="last clear">
+          <article class="one_quarter">
+            <figure><img src="images/demo/215x315.gif" width="215" height="315" alt="">
+              <figcaption>Image Caption Here</figcaption>
+            </figure>
+          </article>
+          <article class="one_quarter">
+            <figure><img src="images/demo/215x315.gif" width="215" height="315" alt="">
+              <figcaption>Image Caption Here</figcaption>
+            </figure>
+          </article>
+          <article class="one_quarter">
+            <figure><img src="images/demo/215x315.gif" width="215" height="315" alt="">
+              <figcaption>Image Caption Here</figcaption>
+            </figure>
+          </article>
+          <article class="one_quarter lastbox">
+            <figure><img src="images/demo/215x315.gif" width="215" height="315" alt="">
+              <figcaption>Image Caption Here</figcaption>
+            </figure>
+          </article>
+        </section>
+        <!-- / One Quarter -->
+      </div>
+      <!-- / content body -->
     </div>
-    <!-- / content body -->
   </div>
-</div>
 <!-- Footer -->
 <div class="wrapper row3">
   <footer id="footer" class="clear">
