--- a/Nov6 2021(Grid Templates)/basic-85/index.html
+++ b/Nov6 2021(Grid Templates)/basic-85/index.html
@@ -4,7 +4,44 @@
 <title>Basic 85</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="styles/layout.css" type="text/css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--[if lt IE 9]><script src="scripts/html5shiv.js"></script><![endif]-->
+<style>
+   @media only screen and (max-width: 1023px){
+     *{box-sizing: border-box;}
+    #header{width: 100%;padding:10px 0px;}
+    #header #hgroup{width:100%;text-align: center;}
+    #header nav{ margin:10px 0 0 0; padding:5px 0; color:#C0BAB6; background-color:#232323;}
+    #header nav ul{padding:0px 5px;display: grid;grid-template-rows:auto auto auto auto auto ;}
+    #header nav li{border: 1px solid yellow;padding:5px;text-align: center;}
+    #container{width:100%;padding:10px 0px;}
+    #container #shout{width:100%;background-color: wheat;margin-bottom: 0px;padding-bottom: 10px;}
+    #container #shout p{width: 100%;}
+    .one_quarter{width: 100%;}
+    .one_quarter img{width: 100%;}
+    #container #homepage #latest article figure figcaption{text-align: center;}
+    #container #homepage #latest{margin-bottom:10px;}
+    #container #homepage #latest article figure ul li{margin-bottom:5px;}
+    #container #homepage #services article {border: 1px solid tomato;margin-bottom: 2px;}
+    #container .more {text-align: center;}
+    #footer{width: 100%;}
+
+   }
+
+
+   @media only screen and (min-width: 1024px) {
+     *{box-sizing: border-box;}
+    #header{display: grid;grid-template-columns: auto auto;}
+    #header #hgroup{ margin:0 0 20px 0;}
+    #header nav{display:block; margin:10px 0 0 0; padding:20px 0; color:#C0BAB6; background-color:#232323;}
+    #header nav ul{display: grid;grid-template-columns: auto auto auto auto auto;}
+    #header nav li{margin-right:25px; text-transform:uppercase;}
+    #container #homepage #latest article figure ul{display: grid;grid-template-columns: auto auto auto auto;}
+    .one_quarter, .two_quarter, .three_quarter, .four_quarter{ margin:0 15px 0 0;}
+    #container #homepage #services {display: grid;grid-template-columns: auto auto auto auto;}
+   }
+
+</style>
 </head>
 <body>
 <div class="wrapper row1">
@@ -31,92 +68,91 @@
     <section id="shout">
       <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna urnaretra lor urna neque sed quis orci nulla laoremut vitae doloreet condimentumst.</p>
     </section>
-    <!-- main content -->
-    <div id="homepage">
-      <!-- One Quarter -->
-      <section id="latest">
-        <article>
-          <figure>
-            <ul>
-              <li class="one_quarter"><img src="images/demo/215x150.gif" width="215" height="150" alt=""></li>
-              <li class="one_quarter"><img src="images/demo/215x150.gif" width="215" height="150" alt=""></li>
-              <li class="one_quarter"><img src="images/demo/215x150.gif" width="215" height="150" alt=""></li>
-              <li class="one_quarter lastbox"><img src="images/demo/215x150.gif" width="215" height="150" alt=""></li>
-            </ul>
-            <figcaption><a href="#">View All Our Recent Work Here &raquo;</a></figcaption>
-          </figure>
-        </article>
-      </section>
-      <!-- / One Quarter -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- services area -->
-      <section id="services" class="last clear">
-        <article class="one_quarter">
-          <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
-          <strong>Lorum ipsum dolor</strong>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <article class="one_quarter">
-          <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
-          <strong>Lorum ipsum dolor</strong>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <article class="one_quarter">
-          <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
-          <strong>Lorum ipsum dolor</strong>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <article class="one_quarter lastbox">
-          <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
-          <strong>Lorum ipsum dolor</strong>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <!-- spacer - clearer -->
-        <div class="spacer"></div>
-        <!-- / spacer - clearer -->
-        <article class="one_quarter">
-          <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
-          <strong>Lorum ipsum dolor</strong>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <article class="one_quarter">
-          <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
-          <strong>Lorum ipsum dolor</strong>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <article class="one_quarter">
-          <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
-          <strong>Lorum ipsum dolor</strong>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <article class="one_quarter lastbox">
-          <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
-          <strong>Lorum ipsum dolor</strong>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-      </section>
-      <!-- / services area -->
+<!-- main content -->
+<div id="homepage">
+  <!-- One Quarter -->
+  <section id="latest">
+    <article>
+      <figure>
+        <ul>
+          <li class="one_quarter"><img src="images/demo/215x150.gif" width="215" height="150" alt=""></li>
+          <li class="one_quarter"><img src="images/demo/215x150.gif" width="215" height="150" alt=""></li>
+          <li class="one_quarter"><img src="images/demo/215x150.gif" width="215" height="150" alt=""></li>
+          <li class="one_quarter lastbox"><img src="images/demo/215x150.gif" width="215" height="150" alt=""></li>
+        </ul>
+        <figcaption><a href="#">View All Our Recent Work Here &raquo;</a></figcaption>
+      </figure>
+    </article>
+  </section>
+  
+        <!-- / One Quarter -->
+        <!-- ########################################################################################## -->
+        <!-- ########################################################################################## -->
+        <!-- ########################################################################################## -->
+        <!-- ########################################################################################## -->
+        <!-- services area -->
+        <section id="services" class="last clear">
+          <article class="one_quarter">
+            <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
+            <strong>Lorum ipsum dolor</strong>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+            <p class="more"><a href="#">Read More &raquo;</a></p>
+          </article>
+          <article class="one_quarter">
+            <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
+            <strong>Lorum ipsum dolor</strong>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+            <p class="more"><a href="#">Read More &raquo;</a></p>
+          </article>
+          <article class="one_quarter">
+            <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
+            <strong>Lorum ipsum dolor</strong>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+            <p class="more"><a href="#">Read More &raquo;</a></p>
+          </article>
+          <article class="one_quarter lastbox">
+            <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
+            <strong>Lorum ipsum dolor</strong>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+            <p class="more"><a href="#">Read More &raquo;</a></p>
+          </article>
+          <!-- / spacer - clearer -->
+          <article class="one_quarter">
+            <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
+            <strong>Lorum ipsum dolor</strong>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+            <p class="more"><a href="#">Read More &raquo;</a></p>
+          </article>
+          <article class="one_quarter">
+            <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
+            <strong>Lorum ipsum dolor</strong>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+            <p class="more"><a href="#">Read More &raquo;</a></p>
+          </article>
+          <article class="one_quarter">
+            <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
+            <strong>Lorum ipsum dolor</strong>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+            <p class="more"><a href="#">Read More &raquo;</a></p>
+          </article>
+          <article class="one_quarter lastbox">
+            <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
+            <strong>Lorum ipsum dolor</strong>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+            <p class="more"><a href="#">Read More &raquo;</a></p>
+          </article>
+        </section>
+        <!-- / services area -->
+      </div>
+      <!-- / content body -->
     </div>
-    <!-- / content body -->
   </div>
-</div>
-<!-- Footer -->
-<div class="wrapper row3">
-  <footer id="footer" class="clear">
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-  </footer>
-</div>
+  <!-- Footer -->
+  <div class="wrapper row3">
+    <footer id="footer" class="clear">
+      <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
+      <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
+    </footer>
+  </div>
 </body>
 </html>
