Tempalte 5 of grid type was done successfully

--- a/Nov6 2021(Grid Templates)/Basic-87/index.html
+++ b/Nov6 2021(Grid Templates)/Basic-87/index.html
@@ -4,7 +4,52 @@
 <title>Basic 88</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="styles/layout.css" type="text/css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--[if lt IE 9]><script src="scripts/html5shiv.js"></script><![endif]-->
+<style>
+     @media only screen and (max-width: 1023px){
+      *{box-sizing: border-box;}
+      #header{width: 100%;padding:10px 0px;}
+      #header #hgroup{width:100%;text-align: center;}
+      #header nav{ margin:10px 0 0 0; padding:5px 0; color:#C0BAB6; background-color:#232323;}
+      #header nav ul{padding:0px 5px;display: grid;grid-template-rows:auto auto auto auto auto ;}
+      #header nav li{border: 1px solid red;padding:5px;text-align: center;}
+      #container{width: 100%;padding: 10px 0px;}
+      #container #slider {margin-bottom:0px;}
+      #container #slider img {width: 100%;}
+      .one_third{background-color: sandybrown;border: 1px solid black; width:100%;margin:0 20px 0 0;text-align: center;margin-bottom: 2px;}
+      #container .more {text-align: center;}
+      #container #homepage #services article figure img {width:100% !important;}
+      #container #homepage #intro article figure{display: grid;grid-template-rows: auto auto;}
+      #container #homepage #intro article figure img{margin:0 0 10px 0; padding:4px; border:1px solid #D6D6D6;width:100% !important;}
+      #container #homepage #intro article figure figcaption{border:1px solid lightgrey; width:100%;}
+      #container #homepage #services {margin-bottom: 10px;} 
+      #footer{display: grid;grid-template-rows: auto auto auto auto;padding:10px 0px;}
+      .one_quarter{padding:2px;border: 1px solid tomato;width:100%; margin:0 15px 0 0;text-align: center;}
+      #footer section h2.title{margin:10px 0 10px 0; padding:0; color:#FFFFFF; background-color:#333333; font-size:12px; font-weight:bold; text-transform:uppercase;}
+      #copyright{width: 100%;}
+    }
+    @media only screen and (min-width: 1024px) {
+      #header, #container, #footer, #copyright{display:block; width:960px; margin:0 auto;}
+      *{box-sizing: border-box;}
+      #header{display: grid;grid-template-columns: auto auto;}
+      #header #hgroup{ margin:0 0 20px 0;}
+      #header nav{display:block; margin:10px 0 0 0; padding:20px 0; color:#C0BAB6; background-color:#232323;}
+      #header nav ul{display: grid;grid-template-columns: auto auto auto auto auto;}
+      #header nav li{margin-right:25px; text-transform:uppercase;}
+      .one_third{margin:0 20px 0 0;}
+      #container #homepage #services {display:grid;grid-template-columns: auto auto auto;}
+      #container #homepage #intro article figure{display: grid;grid-template-columns: auto auto}
+      #container #homepage #intro article figure img{margin:0 0 10px 0; padding:4px; border:1px solid #D6D6D6;}
+      #container #homepage #intro article figure figcaption{border:1px solid black; height:250px;width:460px;}
+      #item1{grid-area:2;}
+      #item2{grid-area:1;}
+      #footer{display: grid;grid-template-columns: auto auto auto auto;}
+      .one_quarter, .two_quarter, .three_quarter, .four_quarter{ margin:0 15px 0 0;}
+
+
+    }
+</style>
 </head>
 <body>
 <div class="wrapper row1">
@@ -29,8 +74,8 @@
   <div id="container" class="clear">
     <!-- Slider -->
     <section id="slider"><a href="#"><img src="images/demo/960x360.gif" alt=""></a></section>
-    <!-- main content -->
-    <div id="homepage">
+     <!-- main content -->
+     <div id="homepage">
       <!-- Services -->
       <section id="services" class="clear">
         <article class="one_third">
@@ -62,92 +107,92 @@
         </article>
       </section>
       <!-- / Services -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- Introduction -->
-      <section id="intro" class="last clear">
-        <article>
-          <figure><img src="images/demo/450x250.gif" width="450" height="250" alt="">
-            <figcaption>
-              <h2>Indonectetus facilis leo nibh</h2>
-              <p>This is a W3C compliant free website template from <a href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="https://www.os-templates.com/template-terms">website template licence</a>.</p>
-              <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit <a href="https://www.os-templates.com/">free website templates</a>.</p>
-              <footer class="more"><a href="#">Read More &raquo;</a></footer>
-            </figcaption>
-          </figure>
-        </article>
-      </section>
-      <!-- / Introduction -->
+        <!-- ########################################################################################## -->
+        <!-- ########################################################################################## -->
+        <!-- ########################################################################################## -->
+        <!-- ########################################################################################## -->
+        <!-- Introduction -->
+        <section id="intro" class="last clear">
+          <article>
+            <figure id="item1"><img src="images/demo/450x250.gif" width="450" height="250" alt="">
+              <figcaption id="item2">
+                <h2>Indonectetus facilis leo nibh</h2>
+                <p>This is a W3C compliant free website template from <a href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="https://www.os-templates.com/template-terms">website template licence</a>.</p>
+                <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit <a href="https://www.os-templates.com/">free website templates</a>.</p>
+                <footer class="more"><a href="#">Read More &raquo;</a></footer>
+              </figcaption>
+            </figure>
+          </article>
+        </section>
+        <!-- / Introduction -->
+      </div>
+      <!-- / content body -->
     </div>
-    <!-- / content body -->
   </div>
-</div>
-<!-- Footer -->
-<div class="wrapper row3">
-  <div id="footer" class="clear">
-    <!-- Section One -->
-    <section class="one_quarter">
-      <h2 class="title">Link Block</h2>
-      <nav>
-        <ul>
-          <li><a href="#">Lorem ipsum dolor sit</a></li>
-          <li><a href="#">Amet consectetur</a></li>
-          <li><a href="#">Praesent vel sem id</a></li>
-          <li><a href="#">Curabitur hendrerit est</a></li>
-          <li class="last"><a href="#">Sed a nulla urna</a></li>
-        </ul>
-      </nav>
-    </section>
-    <!-- Section Two -->
-    <section class="one_quarter">
-      <h2 class="title">Link Block</h2>
-      <nav>
-        <ul>
-          <li><a href="#">Lorem ipsum dolor sit</a></li>
-          <li><a href="#">Amet consectetur</a></li>
-          <li><a href="#">Praesent vel sem id</a></li>
-          <li><a href="#">Curabitur hendrerit est</a></li>
-          <li class="last"><a href="#">Sed a nulla urna</a></li>
-        </ul>
-      </nav>
-    </section>
-    <!-- Section Three -->
-    <section class="one_quarter">
-      <h2 class="title">Link Block</h2>
-      <nav>
-        <ul>
-          <li><a href="#">Lorem ipsum dolor sit</a></li>
-          <li><a href="#">Amet consectetur</a></li>
-          <li><a href="#">Praesent vel sem id</a></li>
-          <li><a href="#">Curabitur hendrerit est</a></li>
-          <li class="last"><a href="#">Sed a nulla urna</a></li>
-        </ul>
-      </nav>
-    </section>
-    <!-- Section Four -->
-    <section class="one_quarter lastbox">
-      <h2 class="title">Link Block</h2>
-      <nav>
-        <ul>
-          <li><a href="#">Lorem ipsum dolor sit</a></li>
-          <li><a href="#">Amet consectetur</a></li>
-          <li><a href="#">Praesent vel sem id</a></li>
-          <li><a href="#">Curabitur hendrerit est</a></li>
-          <li class="last"><a href="#">Sed a nulla urna</a></li>
-        </ul>
-      </nav>
-    </section>
-    <!-- / Section -->
+  <!-- Footer -->
+  <div class="wrapper row3">
+    <div id="footer" class="clear">
+      <!-- Section One -->
+      <section class="one_quarter">
+        <h2 class="title">Link Block</h2>
+        <nav>
+          <ul>
+            <li><a href="#">Lorem ipsum dolor sit</a></li>
+            <li><a href="#">Amet consectetur</a></li>
+            <li><a href="#">Praesent vel sem id</a></li>
+            <li><a href="#">Curabitur hendrerit est</a></li>
+            <li class="last"><a href="#">Sed a nulla urna</a></li>
+          </ul>
+        </nav>
+      </section>
+      <!-- Section Two -->
+      <section class="one_quarter">
+        <h2 class="title">Link Block</h2>
+        <nav>
+          <ul>
+            <li><a href="#">Lorem ipsum dolor sit</a></li>
+            <li><a href="#">Amet consectetur</a></li>
+            <li><a href="#">Praesent vel sem id</a></li>
+            <li><a href="#">Curabitur hendrerit est</a></li>
+            <li class="last"><a href="#">Sed a nulla urna</a></li>
+          </ul>
+        </nav>
+      </section>
+      <!-- Section Three -->
+      <section class="one_quarter">
+        <h2 class="title">Link Block</h2>
+        <nav>
+          <ul>
+            <li><a href="#">Lorem ipsum dolor sit</a></li>
+            <li><a href="#">Amet consectetur</a></li>
+            <li><a href="#">Praesent vel sem id</a></li>
+            <li><a href="#">Curabitur hendrerit est</a></li>
+            <li class="last"><a href="#">Sed a nulla urna</a></li>
+          </ul>
+        </nav>
+      </section>
+      <!-- Section Four -->
+      <section class="one_quarter lastbox">
+        <h2 class="title">Link Block</h2>
+        <nav>
+          <ul>
+            <li><a href="#">Lorem ipsum dolor sit</a></li>
+            <li><a href="#">Amet consectetur</a></li>
+            <li><a href="#">Praesent vel sem id</a></li>
+            <li><a href="#">Curabitur hendrerit est</a></li>
+            <li class="last"><a href="#">Sed a nulla urna</a></li>
+          </ul>
+        </nav>
+      </section>
+      <!-- / Section -->
+    </div>
   </div>
-</div>
-<!-- Copyright -->
-<div class="wrapper row4">
-  <footer id="copyright" class="clear">
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-  </footer>
-</div>
+  <!-- Copyright -->
+  <div class="wrapper row4">
+    <footer id="copyright" class="clear">
+      <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
+      <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
+    </footer>
+  </div>
 </body>
 </html>
