--- a/template_Grid/T83_spaceX.html
+++ b/template_Grid/T83_spaceX.html
@@ -31,6 +31,15 @@
         #services{
             display: grid;
         }
+        #container section {
+            /* grid---------------------- */
+            /* display: block; */
+            width: 100%;
+            margin: 0 0 30px 0;
+            padding: 0;
+            display: grid;
+            grid-template-columns: auto auto auto auto;
+        }
 
 
         nav {
@@ -75,6 +84,14 @@
             #container {
                 width: 100%;
             }
+            #container section {
+            /* grid---------------------- */
+            /* display: block; */
+            width: 100%;
+            margin: 0 0 30px 0;
+            padding: 0;
+            
+        }
 
             #container #slider img {
                 width: 100%;
