--- a/Assignments/Assignment Grid RWD/temporary.html
+++ b/Assignments/Assignment Grid RWD/temporary.html
@@ -1,38 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic-83</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
-    <div class="wrapper row1">
-<!-- =================================================== Header =================================================== -->
-        <header>
-            <div id="title">
-                <h1><a href="#"> <span style="color:#bb1b3b">Dead Pool</a></h1>
-                <h2>Maximum Effort</h2>
-            </div>
-            <form action="#" >
-                <fieldset>
-                    <input type="text" name="text" id="searchbox" placeholder="Search Our Website...">
-                    <input type="submit" value="SUBMIT" id="submit">
-                </fieldset>
-            </form>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#section2">Cast</a></li>
-                    <li><a href="#movieplot">Movie Plot</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li class=".last"><a href="#main_footer">Contact us</a></li>
-                </ul>
-            </nav>
-        </header>
-    </div>   
-    <!-- ================================================================================================================= -->
 <!-- =================================================== Container =================================================== -->
 <div class="wrapper row2">
     <div class="container">
@@ -52,9 +17,9 @@
                     </figure>
                     <strong>Ryan Ronalds</strong>
                     <p>Ryan Rodney Reynolds (born October 23, 1976) is a Canadian actor and film producer.</p>
-                    <div class="readmore">
+                    <p class="readmore">
                         <a href="https://en.wikipedia.org/wiki/Ryan_Reynolds" target="_blank">Read More »</a>
-                    </div>
+                    </p>
                 </article>
                 <article id="article2" class="article_row1">
                     <figure>
@@ -62,9 +27,9 @@
                     </figure>
                     <strong>Morena Baccarin</strong>
                     <p>Morena Silva de Vaz Setta Baccarin ( born June 2, 1979) is a Brazilian actress.</p>
-                    <div class="readmore">
+                    <p class="readmore">
                         <a href="https://en.wikipedia.org/wiki/Morena_Baccarin"  target="_blank">Read More »</a>
-                    </div>
+                    </p>
                 </article>
                 <article id="article3" class="article_row1">
                     <figure>
@@ -72,9 +37,9 @@
                     </figure>
                     <strong>Ed Skrein</strong>
                     <p>Edward George Skrein (born 29 March 1983) is an English actor, film director, screenwriter and rapper.</p>
-                    <div class="readmore">
+                    <p class="readmore">
                         <a href="https://en.wikipedia.org/wiki/Ed_Skrein"  target="_blank">Read More »</a>
-                    </div>
+                    </p>
                 </article>
                 <article id="article4" class="article_row1 last">
                     <figure>
@@ -82,9 +47,9 @@
                     </figure>
                     <strong>Karan Soni</strong>
                     <p>Karan Soni (born January 8, 1989) is an Indian-American actor. Often appearing in comedic roles.</p>
-                    <div class="readmore">
+                    <p class="readmore">
                         <a href="https://en.wikipedia.org/wiki/Karan_Soni"  target="_blank">Read More »</a>
-                    </div>
+                    </p>
                 </article>
             </section>
 
@@ -120,11 +85,8 @@
 <!-- =======================================================Footer==================================================== -->
 <div class="wrapper row3">
     <footer >
-        <p>Copyright © 2021 - All Rights Reserved - CinemaBandi</p>
-        <p>Template cloned from OS-Templates by Ervin </p>
+        <p id="left_footer">Copyright © 2021 - All Rights Reserved - CinemaBandi</p>
+        <p id="right_footer">Template cloned from OS-Templates by Ervin </p>
     </footer>
 </div>
 <!-- ================================================================================================================= -->
-    
- </body>
-</html>
